# ichatbio-web-agent

./: README.md  pyproject.toml
src/: agent.py
src/entrypoints/: web_search.py
tests/: conftest.py  test_agent.py
